post v0.4.0:
	- Replace usage of insertAdjacentHTML by insertAdjacentElement, to
	avoid bugs where some attributes are not properly serialized.

	- Use Bugzilla API Key as a way to query information from security
	issues. The API Key can be set using the "Preferences" tab of the
	addons in about:addons.

	- Prevent patching text which is directly in an A tag, to avoid
	adding links on top of existing links.

	- Add support for converting file into searchfox link from crash
	report made on treeherder. ([file:hgrev : line + 0x..]) and
	([file:hgrev : line])

	- Add support for converting compiler file references
	into searchfox links. (path:line:col)

	- Within comments, converts file paths to searchfox links when
	they are located in code section and follow the following format
	"at <path>:<line>", which is typically produced by gdb.