@@ -16,6 +16,19 @@ let reactions = {
     let response = await fetch(url, opt);
     let txt = await response.text();
     return txt;
+  },
+
+  async csapi_fetch(message, sender, sendResponse) {
+    let { ["crash-stats"]: settings } = await browser.storage.local.get("crash-stats");
+    settings = settings || {};
+    let url = message.url;
+    let opt = { method: "GET", headers: {} };
+    if ("apiToken" in settings) {
+      opt.headers["Auth-Token"] = settings.apiToken;
+    }
+    let response = await fetch(url, opt);
+    let txt = await response.text();
+    return txt;
   }
 };
 
