@@ -17,6 +17,13 @@
     <input type="password" id="bugzilla-apiKey" data-setting="apiKey"/>
   </div>
 
+  <h3>Crash Stats</h3>
+  <div class="service-settings" data-type="crash-stats">
+    <label for="crashstats-apiKey">API Token (<a href="https://crash-stats.mozilla.org/api/tokens/">manage API tokens</a>)</label>
+    <input type="password" id="crashstats-apiToken" data-setting="apiToken"/>
+  </div>
+</section>
+
 <section class="subcategory">
   <p>Thanks for using Meta-Bugs! <a href="https://github.com/nbp/meta-bugs/">Bug reports, enhancement requests and pull requests welcome!</a></p>
 </section>
